src/styles/abstracts/_normalize.scss
*,
:after,
:before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  letter-spacing: 0.02em;
}
html,
body {
  font-weight: 400;
  font-style: normal;
  letter-spacing: normal;
  overflow-x: hidden;
  min-block-size: 100%;
  color: $gray-500;
  background-color: $body-bg;
}
html {
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  font-family: work sans, sans-serif;
  overflow-y: scroll;
  line-height: 1.5;
  font-size: 1rem;
}
.app_center {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: $white;
}

